--- a/assets/css/essay_tiles.css
+++ b/assets/css/essay_tiles.css
@@ -1,22 +1,45 @@
-#wrapper {
-    width: 70%;
-    min-width: 800px;
-    margin: 50px auto;
+/*for small screens we use only one single column*/
+@media screen and (max-width: 400px) {
+    .essay-wrapper {
+        min-width: 200px;
+        margin-top: 7vh;
+        margin-bottom: 7vh;
+    }
+
+    .essay-columns {
+        -webkit-column-count: 1;
+        -webkit-column-gap: 10px;
+        -moz-column-count: 1;
+        -moz-column-gap: 10px;
+        -moz-column-fill: auto;
+        column-count: 1;
+        column-gap: 15px;
+        column-fill: auto;
+    }
 }
 
-#columns {
-    -webkit-column-count: 2;
-    -webkit-column-gap: 10px;
-    -webkit-column-fill: auto;
-    -moz-column-count: 2;
-    -moz-column-gap: 10px;
-    -moz-column-fill: auto;
-    column-count: 2;
-    column-gap: 15px;
-    column-fill: auto;
+@media screen and (min-width: 400px) {
+    .essay-wrapper {
+        min-width: 400px;
+        margin-top: 7vh;
+        margin-bottom: 7vh;
+    }
+
+    .essay-columns {
+        -webkit-column-count: 2;
+        -webkit-column-gap: 10px;
+        -moz-column-count: 2;
+        -moz-column-gap: 10px;
+        -moz-column-fill: auto;
+        column-count: 2;
+        column-gap: 15px;
+        column-fill: auto;
+    }
 }
 
-.pin {
+
+
+.essay-tile {
     display: inline-block;
     background: #FEFEFE;
     border: 2px solid #FAFAFA;
@@ -36,7 +59,19 @@
     transition: all .2s ease;
 }
 
-.pinTitle {
+.essay-tile img {
+    width: 100%;
+    padding-bottom: 15px;
+}
+
+.essay-tile p {
+    color: #333;
+    margin-bottom: 5px;
+    border-bottom: 1px solid #ccc;
+    padding-bottom: 15px;
+}
+
+.essay-title {
     width: 100%;
     padding-bottom: 7px;
     margin-bottom: 5px;
@@ -44,38 +79,26 @@
     font-weight: bold;
 }
 
-.pinDate {
+.essay-title a:hover {
+    background-color: #A9A9A9;
+}
+
+.essay-title a:link {
+    text-decoration: none;
+    font-weight: bold;
+    color: inherit;
+}
+
+.essay-title a:visited {
+    text-decoration: none;
+    font-weight: bold;
+    color: inherit;
+}
+
+.essay-date {
     width: 100%;
     border-bottom: 1px solid #ccc;
     padding-bottom: 7px;
     margin-bottom: 5px;
     font-size: 1em;
-}
-
-.pin img {
-    width: 100%;
-    padding-bottom: 15px;
-}
-
-.pin p {
-    color: #333;
-    margin-bottom: 5px;
-    border-bottom: 1px solid #ccc;
-    padding-bottom: 15px;
-}
-
-.pinTitle a:hover {
-    background-color: #A9A9A9;
-}
-
-.pinTitle a:link {
-    text-decoration: none;
-    font-weight: bold;
-    color: inherit;
-}
-
-.pinTitle a:visited {
-    text-decoration: none;
-    font-weight: bold;
-    color: inherit;
 }
